Fix x-overflow

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,6 +1,10 @@
+html {
+     overflow-x: hidden;
+}
 body {
     background-color: black;
     width: 100%; 
+    overflow-x: hidden;
 }
 img {
     max-width: 100%;
